--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "This is yet another basic todo-list app developed with the sole purpose of teaching my brother some key concepts about \"modern\" frontend development. He's just starting with it and naturally is having a lot of questions about everything, so I'm keeping this example here just for the record...",
   "main": "index.js",
+  "browserslist": [
+    "last 1 Chrome versions"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
